--- a/index.html
+++ b/index.html
@@ -3,20 +3,92 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>اختبار الفصل الثاني - الرأي العام (45 سؤال)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>اختبار الفصل الأول - الرأي العام (49 سؤال)</title>
   <style>
-    body { font-family: 'Arial', sans-serif; direction: rtl; background: #f8f8f8; padding: 20px; }
-    .quiz-container { background: #fff; border-radius: 10px; padding: 20px; max-width: 900px; margin: auto; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    h2 { text-align: center; }
-    .question { margin: 25px 0; padding: 10px; border-bottom: 1px solid #ddd; }
-    .question span { font-weight: bold; display: block; margin-bottom: 8px; }
-    .correct-answer { color: green; font-weight: bold; }
-    .wrong-answer { color: red; font-weight: bold; }
-    button { padding: 10px 20px; margin-top: 20px; background: #3498db; color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; }
-    .retry { background: #e74c3c !important; }
-    .result { margin-top: 30px; font-weight: bold; font-size: 18px; text-align: center; }
+    body {
+      font-family: 'Arial', sans-serif;
+      direction: rtl;
+      background: #f8f8f8;
+      padding: 10px;
+      margin: 0;
+      font-size: 1rem;
+    }
+
+    .quiz-container {
+      background: #fff;
+      border-radius: 10px;
+      padding: 1.2rem;
+      max-width: 900px;
+      margin: auto;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 1.3rem;
+    }
+
+    .question {
+      margin: 1.5rem 0;
+      padding: 0.7rem;
+      border-bottom: 1px solid #ddd;
+      font-size: 1.1rem;
+    }
+
+    .question span {
+      font-weight: bold;
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+
+    .question label {
+      display: block;
+      font-size: 1rem;
+      margin: 0.6rem 0;
+      cursor: pointer;
+    }
+
+    input[type="radio"] {
+      transform: scale(1.5);
+      margin-left: 12px;
+      margin-right: 6px;
+    }
+
+    button {
+      padding: 1rem;
+      margin-top: 1.5rem;
+      background: #3498db;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1.1rem;
+      width: 100%;
+    }
+
+    .retry {
+      background: #e74c3c !important;
+    }
+
+    .result {
+      margin-top: 2rem;
+      font-weight: bold;
+      font-size: 1.2rem;
+      text-align: center;
+    }
+
+    @media screen and (max-width: 600px) {
+      body {
+        font-size: 1.1rem;
+      }
+      button {
+        font-size: 1rem;
+      }
+    }
   </style>
 </head>
+
 <body>
 <div class="quiz-container">
   <h2>اختبار الفصل الثاني - الرأي العام (45 سؤال)</h2>
